# cats-eye-marble

./: Cargo.toml  Rocket.toml  rustfmt.toml
migrations/2024-03-05-234246_add_art_table/: up.sql
migrations/2024-08-18-010607_add_paths_view/: up.sql
migrations/2024-09-19-040347_add_posts_proper_title_flag/: up.sql
migrations/2024-10-31-135010_add_timestamp_default/: up.sql
src/: cli.rs  lib.rs  main.rs  models.rs  schema.rs  views.rs
src/db/: mod.rs  models.rs  views.rs
static/: cem.css
templates/: directory.html  feed.xml  hello.html  helpers.html  index.html  layout.html  post.html
