[package]
name = "cats-eye-marble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-rocket", "markdown"] }
askama_rocket = "0.12.0"
chrono = "0.4.35"
diesel = { version = "2.1.4", features = ["postgres", "chrono"] }
rocket = "0.5.0"
rocket_db_pools = { version = "0.1.0", features = ["diesel_postgres"] }
