[package]
name = "cats-eye-marble"
version = "0.0.0"
edition = "2021"

[lib]
name = "cem"

[[bin]]
name = "cem-site"
path = "src/main.rs"

[[bin]]
name = "cem-cli"
path = "src/cli.rs"

[dependencies]
askama = { version = "0.12.1", features = ["with-rocket", "markdown"] }
askama_rocket = "0.12.0"
chrono = "0.4.35"
clap = { version = "4.5.20", features = ["derive"] }
diesel = { version = "2.1.4", features = ["postgres", "chrono"] }
edit = "0.1.5"
rocket = "0.5.0"
rocket_db_pools = { version = "0.1.0", features = ["diesel_postgres"] }
serde = { version = "1.0.213", features = ["derive"] }
tempfile = "3.13.0"
toml = { version = "0.8.19", features = ["preserve_order"] }
